# furax-cs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  todo.md
app/: Home.py
docs/: Makefile  cli_reference.md  conf.py  index.md  minimization.md  quick_start.md  requirements.txt
docs/api/: index.md
docs/r_analysis/: bin.md  estimate.md  index.md  plot.md  snap.md  validate.md
notebooks/: 01_FGBuster_vs_FURAX_Comparison.ipynb  02_KMeans_Adaptive_Component_Separation.ipynb  03_PTEP_Multi_Resolution_Component_Separation.ipynb  05_Estimating_r.ipynb  06_Optimizer_Benchmark.ipynb  09_NLL_Validation.ipynb  80-illustraions.ipynb  80-plot_runs.ipynb
slurm/runners/: 01-bench_illustrate.sh  02-kmeans.sh  02-kmeans_c1d0s0.sh  02-multi-res.sh  03-kmeans_c1d1s1.sh  04-kmeans.sh  04-multi-res.sh  05-noise_model.sh  05-tensor-scalar.sh  05-validate_furax.sh  06-gridding.sh  06-tensor-scalar.sh  06-validate_fg.sh  06-validate_fg_parallel.sh  07-gridding.sh  07-tensor-scalar.sh  07-validate_furax.sh  08-validate_furax.sh  09-validate_fg.sh  09-validate_plot.sh  10-kmeans_true_clusters.sh  10-master_plots.sh  11-binning.sh  local_master_plots.sh
src/: __init__.py
src/furax_cs/: __init__.py  binning.py  kmeans_clusters.py  logging_utils.py  multires_clusters.py  noise.py
src/furax_cs/data/: __init__.py  generate_maps.py  grid_search_data.py  instruments.py  search_space.py  search_spaces_noise_validation.yaml
src/furax_cs/data/pixelsubset/: pixel_subsets_from_true_d1_s1_Bd_nbins100.npy  pixel_subsets_from_true_d1_s1_Bs_nbins100.npy  pixel_subsets_from_true_d1_s1_Td_nbins100.npy
src/furax_cs/optim/: __init__.py  active_set.py  minimize.py  solvers.py  utils.py
src/furax_cs/r_analysis/: __init__.py  binning.py  caching.py  compute.py  main.py  parser.py  plotting.py  r_estimate.py  residuals.py  run_grep.py  snapshot.py  utils.py  validate.py
src/furax_cs/r_analysis/plotting/: __init__.py  group.py  individual.py  single.py
src/furax_cs/scripts/: bench_bcp.py  bench_clusters.py  compute_mr.py  distributed_gridding.py  fgbuster_model.py  kmeans_model.py  noise_model.py  plot_pixel_subsets.py  ptep_model.py
tests/: test_binning.py
